# jawk

./: README.md
gnu-libjit-sys/: build.rs
jawk/: .gitignore  Cargo.toml  in.prog  main.c  prog2.awk  text_results
jawk/src/: args.rs  awk_str.rs  global_scalars.rs  integration_tests.rs  main.rs  optional_usize.rs  printable_error.rs  test.rs  util.rs
jawk/src/codegen/: builtin_codegen.rs  callable_function.rs  codegen_consts.rs  function_codegen.rs  function_scope.rs  globals.rs  helpers.rs  mod.rs  scopes.rs  subroutines.rs  tag.rs  value.rs
jawk/src/codegen/function_codegen/: builtin_codegen.rs  helpers.rs  mod.rs
jawk/src/codgen/: helpers.rs  mod.rs  scopes.rs  subroutines.rs
jawk/src/columns/: borrowing_split.rs  borrrowing_split.rs  file_reader.rs  file_record_reader.rs  index_of.rs  lazily_split_line.rs  mod.rs  tests.rs
jawk/src/columns/lazily_split_line/: mod.rs  test.rs
jawk/src/lexer/: escaped_string_reader.rs  mod.rs  types.rs
jawk/src/parser/: mod.rs  test.rs  transformer.rs  types.rs
jawk/src/runtime/: array_split.rs  arrays.rs  call_log.rs  debug_runtime.rs  float_parser.rs  helpers.rs  live.rs  mod.rs  release_runtime.rs  string_converter.rs  testing.rs  util.rs  value.rs
jawk/src/runtime/debug_runtime/: mod.rs  native.rs  string_tracker.rs  value.rs
jawk/src/runtime/release_runtime/: hacky_alloc.rs  mod.rs  native.rs
jawk/src/symbolizer/: mod.rs
jawk/src/typing/: analysis_results.rs  function.rs  function_map.rs  function_pass.rs  inference_pass.rs  inference_tests.rs  ityped_function.rs  mod.rs  reconcile.rs  test.rs  typed_function.rs  typed_user_function.rs  types.rs
jawk/src/typing/builtin_funcs/: builtin_factory.rs  builtin_func.rs  mod.rs  typed_builtin.rs
jawk/src/typing/passes/: function_pass.rs  inference_pass.rs  mod.rs
jawk/src/typing/structs/: analysis_results.rs  builtin_func.rs  call.rs  call_link.rs  function_map.rs  ityped_function.rs  mod.rs  typed_function.rs  typed_program.rs  typed_user_function.rs
jawk/src/typing/tests/: function_pass_tests.rs  inference_pass_tests.rs  inference_tests.rs  mod.rs
jawk/tests/: integration_tests.rs
mawk-regex/: Cargo.toml  README.md
mawk-regex/examples/: regex.rs
mawk-regex/src/: lib.rs  tests.rs
rawk/: Cargo.toml  profile.sh
rawk/src/: args.rs  arrays.rs  awk_str.rs  global_scalars.rs  main.rs  specials.rs  stack_counter.rs  stackt.rs  tests.rs  util.rs
rawk/src/arrays/: mod.rs  split.rs
rawk/src/awk_str/: awk_byte_str.rs  awk_str.rs  mod.rs  rc_awk_str.rs  sub_repl_str.rs
rawk/src/columns/: borrowing_split.rs  file_record_reader.rs  mod.rs  tests.rs
rawk/src/compiler/: chunk.rs  function_compiler.rs  mod.rs  program_validator.rs
rawk/src/lexer/: escaped_string_reader.rs  mod.rs  types.rs
rawk/src/parser/: mod.rs  test.rs  transformer.rs  types.rs  variable.rs
rawk/src/runtime/: converter.rs  mod.rs  rc_manager.rs  regex_cache.rs  special_manager.rs
rawk/src/runtime/arrays/: split.rs
rawk/src/runtime/columns/: borrowing_split.rs  file_reader.rs  file_record_reader.rs  mod.rs  record_state.rs  splitter.rs  tests.rs
rawk/src/test/: awks.rs  integration_tests.rs  io_capture.rs  mod.rs
rawk/src/typing/: ids.rs  mod.rs  reconcile.rs
rawk/src/vm/: bytecode.rs  converter.rs  machine.rs  mod.rs  numbers.rs  ops.rs  rc_manager.rs  regex_cache.rs  runtime_scalar.rs  vm_func.rs  vm_program.rs  vm_special_vars.rs
(+56 files in other folders)
